--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vitest": "^2.0.4"
   },
   "devDependencies": {
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
